css/contact.css
@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700;800&display=swap');
*{
  margin: 0px;
  padding: 0;
  overflow-x: hidden;

}

.hamburger{
  top: 0;
}
.map{
  position: relative;
  overflow: hidden;
  width: 100%;
  padding-top: 56.25%;
}
.gmap{
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  width: 100%;
  height: 100%;
}
.row-header{
    margin: 0px auto;
    padding: 0px auto;

}
.row-content{
    margin: 0px auto;
    padding: 50px 0px 50px 0px;
    border-bottom: 1px ridge;
    min-height: 400px;
    color: #ffffff;
}
.footer{
    margin: 0px ;
    padding: 20px 0px 0px 0px;
    color: #ffffff;
}
.address{
    font-size: 100%;
    margin: 0px;
    padding: 10px;
    font-family: 'Raleway', sans-serif; 
    
   
}
body{
    padding: 50px 0px 0px 0px;
    z-index: 0;
    background-color: #000000;
    background-image: url(../images/45-degree-fabric-dark.png);
    overflow-x: hidden;
    font-family: 'Raleway', sans-serif;
}
.fa {
    padding: 0;
    font-size: 40px;
    width: 30px;
    text-align: center;
    text-decoration: none;
    color: #ffffff;
    margin-right: 30px;
    padding-top: 20px;
    
  
    
    
  }
  .fa-phone {
    padding: 0;
    font-size: 30px;
    width: 30px;
    text-align: center;
    text-decoration: none;
    padding-bottom: 20px;
    
  }
  .fa:hover {
    opacity: 0.7;
    text-decoration: none;
    color: #FF9933;
  }
  

  .mail{
    color: white;
    padding: 20px;
    
  }

  .call i{
    color: white;
    padding: 20px;

  }
  .heading{
    text-align: center;
    color: white;
    padding-top: 10px;
    
  }
  .codrops-top a strong  {
    padding-right:30px;
    padding-left: 5px;
    
   margin-top: 40px;
    letter-spacing: 1px;
    color: #ffffff;
    font-size: 40px;
    
  }
  .topbar{
    padding-top: 0px;
  }
  @media screen and (max-width:600px){
    .footer{
      font-size: 12px;
      padding: 10px 0px 0px 0px;
    }
    
  }
  
 

